--- a/animation/03-dropdown-menu/style.css
+++ b/animation/03-dropdown-menu/style.css
@@ -7,6 +7,17 @@
   color: rgb(247, 247, 247);
   cursor: pointer;
 }
+@keyframes dropdown {
+  0% {
+    transform: scaleY(0);
+  }
+  80% {
+    transform: scaleY(1.1);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
 
 .menu-title {
   background-color: rgb(163, 162, 162);
@@ -17,8 +28,8 @@
   padding: 0;
   margin: 0;
   background-color: rgb(99, 97, 97);
-
   display: none;
+  transform-origin: top;
 }
 
 ul.dropdown-menu li:hover {
@@ -27,6 +38,5 @@ ul.dropdown-menu li:hover {
 
 .visible {
   display: block;
+  animation: dropdown 1000ms ease-in-out 100ms both;
 }
-
-
